# MandelbrotSet

./: App.cpp  App.h  CMakeLists.txt  Complex.h  MandelbrotSet.cpp  MandelbrotSet.h  includes.h  main-styles.qss  main.cpp
